universal function for DOM elements, little code improving

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,4 +10,8 @@
           line-height: 100px;
           justify-content: center;
             }
+            .uploader__loadedTotal{
+              height: 20px;
+              margin: 0;
+            }
         }
